--- a/batch-example/build.gradle
+++ b/batch-example/build.gradle
@@ -26,5 +26,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-batch')
 	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	compile('org.postgresql:postgresql')
+	testCompile('org.springframework.batch:spring-batch-test:3.0.8.RELEASE')
+	runtime('org.postgresql:postgresql')
 }
