--- a/batch-example/build.gradle
+++ b/batch-example/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
-	ext {
-		springBootVersion = '1.5.6.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.5.6.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 apply plugin: 'java'
@@ -18,14 +18,15 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-batch')
-	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework.batch:spring-batch-test:3.0.8.RELEASE')
-	runtime('org.postgresql:postgresql')
+    compile('org.springframework.boot:spring-boot-starter-batch')
+    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.batch:spring-batch-test:3.0.8.RELEASE')
+    runtime('org.postgresql:postgresql')
+    testRuntime('org.hsqldb:hsqldb')
 }
